--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,11 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.1'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     compile group: 'io.cucumber', name: 'cucumber-picocontainer', version: '4.3.1'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'io.cucumber:cucumber-java8:4.3.1'
     testCompile 'io.cucumber:cucumber-junit:4.3.1'
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.0.0'
 }
 
 sourceSets {
@@ -31,3 +32,16 @@ sourceSets {
         }
     }
 }
+
+task startSeleniumHub(type: Exec) {
+    workingDir "$projectDir/selenium"
+    commandLine "sh", "start-hub.sh"
+}
+
+
+task startSeleniumNode(type: Exec) {
+    workingDir "$projectDir/selenium"
+    commandLine "sh", "start-node.sh"
+}
+
+startSeleniumNode.dependsOn startSeleniumHub
